--- a/docker/config.json
+++ b/docker/config.json
@@ -5,10 +5,13 @@
   "listenAddr": ":8080",
   "features": [
   ],
-  "caminogo": "http://camino:9650",
+  "caminoNode": "http://camino:9650",
   "nodeInstance": "default",
-  "cchainId": "2q9e4r6Mu3U68nU1fYjgbR6JvwrRx36CohpAX5UQxse55x1Q5",
   "chains": {
+    "2q9e4r6Mu3U68nU1fYjgbR6JvwrRx36CohpAX5UQxse55x1Q5": {
+      "id": "2q9e4r6Mu3U68nU1fYjgbR6JvwrRx36CohpAX5UQxse55x1Q5",
+      "vmType": "cvm"
+    },
     "11111111111111111111111111111111LpoYY": {
       "id": "11111111111111111111111111111111LpoYY",
       "vmType": "pvm"
